# zren

./: .gitignore  CMakeLists.txt  Makefile  README.md  client.c  client.h  ignore.c  ignore.h  log.c  log.h  main.c  menu.c  menu.h  storage.c  storage.h  track.c  track.h
server/: Makefile  main.c  server.c  server.h  server.py
